--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
-
+ConsoleApplication1/bin*
+ConsoleApplication1/obj*
 # =========================
 # Operating System Files
 # =========================
